vertical align fix

--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -142,6 +142,13 @@ a {
   }
 }
 
+.va-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
 
 ::-webkit-scrollbar {
   width: 10px;
